# bachelor-thesis

data/: lib.py
data/experiment01_1/: 10cm.csv  10m.csv  15m.csv  20m.csv  25m.csv  30m.csv  35m.csv  40m.csv  45m.csv  50m.csv  5m.csv  auswertung.ods  metadata.txt
data/experiment01_2/: 10cm.csv  10m.csv  15m.csv  20m.csv  25m.csv  30m.csv  35m.csv  40m.csv  45m.csv  50m.csv  5m.csv  metadata.txt
data/experiment01_3/: 10cm.csv  5m.csv  metadata.txt
data/experiment02_1/: 10cm.csv  10m.csv  15m.csv  20m.csv  25m.csv  30m.csv  35m.csv  40m.csv  45m.csv  50m.csv  5m.csv  auswertung.ods  metadata.txt
data/experiment02_2/: 10cm.csv  10m.csv  15m.csv  20m.csv  25m.csv  30m.csv  35m.csv  40m.csv  45m.csv  50m.csv  5m.csv  metadata.txt
data/experiment03_1/: 0deg.csv  45deg.csv  90deg.csv  metadata.txt
data/experiment04/: metadata.txt  pos1.csv
data/experiment05/: metadata.txt  pos2.csv
data/experiment06/: metadata.txt  pos3.csv
data/experiment07/: 110m_4.75m.csv  120m_4.75m.csv  130m_4.76m.csv  13m_4.75m.csv  141m_4.74m.csv  151m_4.75m.csv  160m_4.74m.csv  21m_4.74m.csv  31m_4.74m.csv  40m_4.75m.csv  (+7 more)
notes/: agenda.org  error.org  knowledgebase.org  literature.org  notes.org  outline.org
notes/jupyter/: bachelor-thesis.ipynb  pyproject.toml
software/: .gitignore
software/data_science_utils/: Cargo.toml
software/data_science_utils/src/: cli.rs  distance.rs  error.rs  main.rs
text/: 01_introduction.typ  02_state-of-the-art.typ  03_principals.typ  appendix.typ  lora-ba-thesis.bib  presentation.bib  presentation.pdfpc  presentation.typ  thesis.typ
(+59 files in other folders)
