[package]
name = "data_science_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
linreg = "0.2.0"
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"
polars = { version = "0.42.0", features = ["lazy", "csv", "dtype-categorical", "fmt"] }
polars-arrow = "0.42.0"
